# SimpleRenderEngineProject

./: CMakeLists.txt
GameProgramming23/Ex10/Engine/: CMakeLists.txt
GameProgramming23/Ex10/Engine/Engine/Components/: ComponentRendererSprite.cpp  ComponentRendererSprite.h
GameProgramming23/Ex10/ExampleGame/: CMakeLists.txt  main.cpp
GameProgramming23/Ex10/ExampleGame/Game/: ComponentController.cpp  ComponentPlatformMove.cpp  ComponentPlatformMove.h  ComponentSpline.cpp  ComponentSpline.h
GameProgramming23/Ex10/ExampleGame/data/: scene.json
GameProgramming23/Ex3/: Engine.h  Mouse.h  Player.h  Score.h  SharedStructs.h  main.cpp
GameProgramming23/SpaceGame/Engine/Engine/: Component.cpp  GameObject.cpp  GameObject.h  MyEngine.cpp  MyEngine.h
GameProgramming23/SpaceGame/ExampleGame/: main.cpp
GameProgramming23/SpaceGame/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentRendererSprite.cpp  ComponentRendererSprite.h  LazerController.cpp  LazerController.h  MeteoriteController.cpp  MeteoriteController.h  PlayerController.cpp  PlayerController.h  PlayerGameObject.cpp  PlayerGameObject.h  enums.h
GameProgramming23/SpaceGame/ExampleGame/data/: space.json  space_2.json  space_3.json
